# openalice-ml

./: Cargo.toml
services/embed-rerank/: Cargo.toml
services/embed-rerank/src/: main.rs
services/gateway/: Cargo.toml
services/gateway/src/: main.rs
services/ner/: Cargo.toml
services/ner/src/: main.rs
