[package]
name = "openalice-ner"
version = "0.1.0"
edition = "2021"
description = "OpenAlice NER Service — zero-shot Named Entity Recognition via GLiNER"

[dependencies]
# HTTP server
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# GLiNER — zero-shot NER via ONNX
gline-rs = "1"
orp = "0.9"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

anyhow = "1"
